News Alignment Fix
- Better aligns the *News:* item so it's floating right, maintaining
RTL/LTR compatibility and without messing up multiple-line news items.

Signed-Off: Matthew "Labradoodle-360" Kerle <lab360@simplemachines.org>

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1487,7 +1487,7 @@ ul li.greeting {
 }
 /* News section. */
 #inner_wrap .news {
-	width: 50%;
+	max-width: 50%;
 	max-width: 27em;
 	float: right;
 	overflow: auto;
